update to fix button wrapping

--- a/assets/sass/cds/_nav.scss
+++ b/assets/sass/cds/_nav.scss
@@ -539,9 +539,16 @@
 
 .container-products-toggle a {
   color: $primary-color;
-  margin: 30px;
-  padding: 10px;
+  margin: 10px;
+  padding: 5px 10px;
   border-bottom: 1px dashed $primary-color;
+  font-size:0.6em;
+
+  @include desktop {
+    margin: 30px;
+    padding: 10px;
+    font-size:0.9em;
+  }
 }
 
 .container-products-toggle a.active {
